--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ asi-open-test
 asi-test-ORIG
 asi-test-RE
 asi-test.o
+asi-enum-strings.o
 libUSB.o
 usb_control_transfer.log
 libASICamera2_ReverseEngineered.o
